# serializer version: 1
# name: test_restore_device_tracker_save_state[enabled_entities0-vw_id_4-location]
  list([
    dict({
      'raw_value': dict({
        'latitude': 37.4292,
        'longitude': 122.1381,
      }),
    }),
  ])
# ---
# name: test_webhook_update[vehicle_state-vw_id_4][binary_sensor.vw_id_4_charging_cable_plugged_in]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'plug',
      'friendly_name': 'VW ID.4 Charging Cable Plugged In',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.vw_id_4_charging_cable_plugged_in',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state-vw_id_4][device_tracker.vw_id_4_location]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'age': '2025-12-08T20:54:12+00:00',
      'fetched_at': '2025-12-08T21:34:15.488000+00:00',
      'friendly_name': 'VW ID.4 Location',
      'gps_accuracy': 0,
      'icon': 'mdi:car',
      'latitude': 52.238523055555554,
      'longitude': 0.15465555555555555,
      'source_type': <SourceType.GPS: 'gps'>,
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.vw_id_4_location',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'not_home',
  })
# ---
# name: test_webhook_update[vehicle_state-vw_id_4][lock.vw_id_4_door_lock]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'VW ID.4 Door Lock',
      'supported_features': <LockEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'lock.vw_id_4_door_lock',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state-vw_id_4][number.vw_id_4_charge_limit]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'VW ID.4 Charge Limit',
      'icon': 'mdi:battery-charging-80',
      'max': 100.0,
      'min': 50.0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 1.0,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.vw_id_4_charge_limit',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state-vw_id_4][sensor.vw_id_4_battery]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'battery',
      'friendly_name': 'VW ID.4 Battery',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.vw_id_4_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state-vw_id_4][sensor.vw_id_4_battery_capacity]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'energy_storage',
      'friendly_name': 'VW ID.4 Battery Capacity',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfEnergy.KILO_WATT_HOUR: 'kWh'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.vw_id_4_battery_capacity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state-vw_id_4][sensor.vw_id_4_charging_status]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'VW ID.4 Charging Status',
      'icon': 'mdi:ev-station',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.vw_id_4_charging_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state-vw_id_4][sensor.vw_id_4_engine_oil_life]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'VW ID.4 Engine Oil Life',
      'icon': 'mdi:oil-level',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.vw_id_4_engine_oil_life',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state-vw_id_4][sensor.vw_id_4_fuel]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'VW ID.4 Fuel',
      'icon': 'mdi:gas-station',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfVolume.LITERS: 'L'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.vw_id_4_fuel',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state-vw_id_4][sensor.vw_id_4_fuel_percent]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'VW ID.4 Fuel Percent',
      'icon': 'mdi:gas-station',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.vw_id_4_fuel_percent',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state-vw_id_4][sensor.vw_id_4_fuel_range]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'distance',
      'friendly_name': 'VW ID.4 Fuel Range',
      'icon': 'mdi:map-marker-distance',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfLength.KILOMETERS: 'km'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.vw_id_4_fuel_range',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state-vw_id_4][sensor.vw_id_4_odometer]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'distance',
      'friendly_name': 'VW ID.4 Odometer',
      'state_class': <SensorStateClass.TOTAL_INCREASING: 'total_increasing'>,
      'unit_of_measurement': <UnitOfLength.KILOMETERS: 'km'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.vw_id_4_odometer',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state-vw_id_4][sensor.vw_id_4_range]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'distance',
      'friendly_name': 'VW ID.4 Range',
      'icon': 'mdi:map-marker-distance',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfLength.KILOMETERS: 'km'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.vw_id_4_range',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state-vw_id_4][sensor.vw_id_4_tire_pressure_back_left]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'pressure',
      'friendly_name': 'VW ID.4 Tire Pressure Back Left',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPressure.KPA: 'kPa'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.vw_id_4_tire_pressure_back_left',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state-vw_id_4][sensor.vw_id_4_tire_pressure_back_right]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'pressure',
      'friendly_name': 'VW ID.4 Tire Pressure Back Right',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPressure.KPA: 'kPa'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.vw_id_4_tire_pressure_back_right',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state-vw_id_4][sensor.vw_id_4_tire_pressure_front_left]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'pressure',
      'friendly_name': 'VW ID.4 Tire Pressure Front Left',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPressure.KPA: 'kPa'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.vw_id_4_tire_pressure_front_left',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state-vw_id_4][sensor.vw_id_4_tire_pressure_front_right]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'pressure',
      'friendly_name': 'VW ID.4 Tire Pressure Front Right',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfPressure.KPA: 'kPa'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.vw_id_4_tire_pressure_front_right',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_webhook_update[vehicle_state-vw_id_4][switch.vw_id_4_charging]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'VW ID.4 Charging',
      'icon': 'mdi:ev-plug-type2',
    }),
    'context': <ANY>,
    'entity_id': 'switch.vw_id_4_charging',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
